--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,40 @@
 {
   "name": "Rock City FM",
   "short_name": "RockCityFM",
+  "id": "/",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "description": "Rock City FM Radio Web Application",
   "icons": [
     {
-      "src": "icon.png",
+      "src": "icon-192x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon.png",
+      "src": "icon-512x512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "theme_color": "#000000"
+  "theme_color": "#000000",
+  "prefer_related_applications": false,
+  "dir": "ltr",
+  "lang": "en",
+  "categories": ["music", "radio", "entertainment"],
+  "orientation": "any",
+  "screenshots": [
+    {
+      "src": "screenshot1.png",
+      "sizes": "640x480",
+      "type": "image/png"
+    },
+    {
+      "src": "screenshot2.png",
+      "sizes": "640x480",
+      "type": "image/png"
+    }
+  ]
 }
