--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
       "sizes": "192x192"
     },
     {
-      "src": "/RockFM/icon-512x512.png",
+      "src": "/RockFM/icon1.png",
       "type": "image/png",
       "sizes": "512x512"
     }
